# TUP-Vision

./: CMakeLists.txt  Debug.h  Energy.cpp  Readme.md  main.cpp
AngelSolver/: AngleSolver.cpp  AngleSolver.hpp  Kalman.cpp  Kalman.h
Armor/: ArmorDetector.cpp  ArmorDetector.hpp  Debug.h  Settings.hpp  debug.h
Camera/: DaHengCamera.cpp
Energy/: Debug.h  Energy.cpp  Energy.h  EnergyDebug.h  EnergyMain.cpp  Main.cpp  Params.cpp  Params.h  debug.h
File/: calib_no_4_1280.yml  param_config.yml
General/: General.cpp  General.h
ImageProcess/: ImageProcess.cpp  ImageProcess.h
SVM/: Svm.cpp  Svm.h
Serial/: serialport.cpp  serialport.h
TUP-Vision/: CMakeLists.txt  WatchDog.sh  config.txt  main.cpp
TUP-Vision/AngelSolver/: AngleSolver.cpp  AngleSolver.hpp  Kalman.h
TUP-Vision/Armor/: ArmorDetector.hpp
TUP-Vision/Energy/: Energy.cpp  EnergyDebug.h  EnergyMain.cpp  Params.cpp
TUP-Vision/File/: calib_no_4_1280.yml  param_config.yml
Video/: VIDEO_USB_2021_4_3_0_2_38.avi
